[package]
name = "kyte"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Extensible mechanics for operational transformation in Rust that are generic with respect to their value (not constrained to text), wire-compatible with Quill and fully fuzzed."
documentation = "https://docs.rs/kyte/"
homepage = "https://github.com/glacyr/kyte"
repository = "https://github.com/glacyr/kyte"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.1", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
